--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shiritori Game</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
+  <h1 class="title">Shiritori Game</h1>
+  <main class="shiritori">
+    <div class="shiritori__input">
+      <input type="text" class="shiritori__input-field">
+      <button class="shiritori__input-button"></button>
+    </div>
+    <div class="shiritori__functionality">
+      <div class="shiritori__functionality-btns">
+        <button class="shiritori__functionality-show"></button>
+        <button class="shiritori__functionality-status"></button>
+        <button class="shiritori__functionality-restart"></button>
+      </div>
+    </div>
+  </main>
+  <div class="modal">
+    <div class="modal__message">
+      <p class="modal__message-text"></p>
+      <div class="modal__message-btns">
+        <button class="modal__message-btn"></button>
+        <button class="modal__message-btn"></button>
+      </div>
+    </div>
+
+  </div>
+
 </body>
+
 </html>
