--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shiritori Game</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -20,6 +20,9 @@
         <button class="shiritori__functionality-show"></button>
         <button class="shiritori__functionality-status"></button>
         <button class="shiritori__functionality-restart"></button>
+      </div>
+      <div class="shiritori__functionality-result">
+        
       </div>
     </div>
   </main>
