--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-  <h1 class="title">Shiritori Game</h1>
+
   <main class="shiritori">
+    <h1 class="shiritori__title">Shiritori Game</h1>
     <div class="shiritori__input">
       <input type="text" class="shiritori__input-field">
       <button class="shiritori__input-button"></button>
@@ -22,7 +23,7 @@
         <button class="shiritori__functionality-restart"></button>
       </div>
       <div class="shiritori__functionality-result">
-        
+
       </div>
     </div>
   </main>
