style input and button

--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
     <h1 class="shiritori__title">Shiritori Game</h1>
     <div class="shiritori__input">
       <input type="text" class="shiritori__input-field">
-      <button class="shiritori__input-button"></button>
+      <button class="shiritori__input-button">
+      </button>
     </div>
     <div class="shiritori__functionality">
       <div class="shiritori__functionality-btns">
-        <button class="shiritori__functionality-show"></button>
-        <button class="shiritori__functionality-status"></button>
-        <button class="shiritori__functionality-restart"></button>
+        <button class="shiritori__functionality-btn">Show</button>
+        <button class="shiritori__functionality-btn">Status</button>
+        <button class="shiritori__functionality-btn">Restart</button>
       </div>
       <div class="shiritori__functionality-result">
-
+        RESULT
       </div>
     </div>
   </main>
