--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <main class="shiritori">
-    <h1 class="shiritori__title">Shiritori Game</h1>
+    <h1 class="shiritori__title">Shiritori s s s Game</h1>
     <div class="shiritori__input">
       <input type="text" class="shiritori__input-field">
       <button class="shiritori__input-button">
