fix style url in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <main class="shiritori">
-    <h1 class="shiritori__title">Shiritori s s s Game</h1>
+    <h1 class="shiritori__title">Shiritori Game</h1>
     <div class="shiritori__input">
       <input type="text" class="shiritori__input-field">
       <button class="shiritori__input-button">
@@ -19,12 +19,12 @@
     </div>
     <div class="shiritori__functionality">
       <div class="shiritori__functionality-btns">
-        <button class="shiritori__functionality-btn">Show</button>
-        <button class="shiritori__functionality-btn">Status</button>
-        <button class="shiritori__functionality-btn">Restart</button>
+        <button class="shiritori__functionality-btn shiritori__functionality-btn--show">Words</button>
+        <button class="shiritori__functionality-btn shiritori__functionality-btn--status">Status</button>
+        <button class="shiritori__functionality-btn shiritori__functionality-btn--restart">Restart</button>
       </div>
       <div class="shiritori__functionality-result">
-        RESULT
+
       </div>
     </div>
   </main>
@@ -38,7 +38,7 @@
     </div>
 
   </div>
-  scri
+  <script src="js/Shiritori.js"></script>
 </body>
 
 </html>
