--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/svg+xml" href="icons/icon.svg" />
   <title>Shiritori Game</title>
   <link rel="stylesheet" href="styles/style.css">
 </head>
